zokrates_cli/examples/compile_errors/non_main_private_args.zok
def mul(private field a) -> field { // `private` should not be allowed here
    return a * a;
}

def main(private field a, field b) {
    assert(mul(a) == b);
    return;
}